--- a/template/index.html
+++ b/template/index.html
@@ -132,80 +132,96 @@
     </ul>-->
 </div>
 
-<div id='student'></div>
+<div id='students'></div>
 
 <script>
 
-    let url = "../data/api.csv";
-    let apiURLArray = [];
-    var jsonApiContent = [];
+    let url = "http://tr_omeka.localhost/api/items?item_set_id=3";
 
-    // Ouvre le fichier CSV
-    d3.csv(url).then(function(data){
-        console.log(data);
-        getApiContentUrl(data);
-        getJsonContent(apiURLArray);
-    })
+    d3.json(url).then(function(data) {
+      d3.select('#students').selectAll('div').data(data).enter().append('div')
+          .html(d=>{ 
+            let v=d["drsp:Studentname"][0]["@value"]+" "+d["drsp:Studentlastname"][0]["@value"]
+            return v;
 
-    // Obtient les url de chaque contenu
-    function getApiContentUrl (data) {
-        data.forEach(element => {
-            // Changer l'adresse en fonction d'où vous avez mis votre dossier omeka s
-            let apiUrl = "http://localhost/ldw/omeka-s/";
-            let fullUrl = apiUrl + element.Url;
-            apiURLArray.push(fullUrl);
-        });
-        console.log(apiURLArray);
-    }
+          })
+          .on("click",function(d){
+            // showStudent(d);
+          });
+          
+    });
 
-    function getJsonContent(apiURLArray) {
-        apiURLArray.forEach(element => {
-            d3.json(element).then(function(data){
-                console.log(data);
-                jsonApiContent.push(data);
-                var studentContent = d3.select("#student")
-                    .selectAll("div")
-                    .data(jsonApiContent)
-                    .enter()
-                    .append("div");
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentname"][0]["@value"]);
+    // let url = "../data/api.csv";
+    // let apiURLArray = [];
+    // var jsonApiContent = [];
+
+    // // Ouvre le fichier CSV
+    // d3.csv(url).then(function(data){
+    //     console.log(data);
+    //     getApiContentUrl(data);
+    //     getJsonContent(apiURLArray);
+    // })
+
+    // // Obtient les url de chaque contenu
+    // function getApiContentUrl (data) {
+    //     data.forEach(element => {
+    //         // Changer l'adresse en fonction d'où vous avez mis votre dossier omeka s
+    //         let apiUrl = "http://tr_omeka.localhost/";
+    //         let fullUrl = apiUrl + element.Url;
+    //         apiURLArray.push(fullUrl);
+    //     });
+    //     console.log(apiURLArray);
+    // }
+
+    // function getJsonContent(apiURLArray) {
+    //     apiURLArray.forEach(element => {
+    //         d3.json(element).then(function(data){
+    //             console.log(data);
+    //             jsonApiContent.push(data);
+    //             var studentContent = d3.select("#student")
+    //                 .selectAll("div")
+    //                 .data(jsonApiContent)
+    //                 .enter()
+    //                 .append("div");
+
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentname"][0]["@value"]);
                 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentlastname"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentlastname"][0]["@value"]);
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentstudent_class"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentstudent_class"][0]["@value"]);
                     
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentstudent_number"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentstudent_number"][0]["@value"]);
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentemail"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentemail"][0]["@value"]);
                 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentconnexion"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentconnexion"][0]["@value"]);
                 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentcms"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentcms"][0]["@value"]);
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentgithub"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentgithub"][0]["@value"]);
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentlanguage"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentlanguage"][0]["@value"]);
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studenttools"][0]["@value"]);
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studenttools"][0]["@value"]);
 
-                studentContent.append("p")
-                    .text(d => d["drsp:Studentnetwork"][0]["@value"]);
-            });
+    //             studentContent.append("p")
+    //                 .text(d => d["drsp:Studentnetwork"][0]["@value"]);
+    //         });
 
-        });
-        console.log(jsonApiContent);
-    }
+    //     });
+    //     console.log(jsonApiContent);
+    // }
 
 
 </script>
