--- a/template/index.html
+++ b/template/index.html
@@ -33,7 +33,7 @@
             
             let studentItems = new dataStudent({
                 cont: "#studentItems",
-                apiUrl: "../data/items.json"
+                apiUrl: "https://jardindesconnaissances.univ-paris8.fr/THYP/20-21/g2/omk/api/"
             })
 
             studentItems.getData();
@@ -41,7 +41,7 @@
 
             let cardStudentItem = new dataStudent({
                 cont: "#studentItem",
-                apiUrl: "../data/item.json"
+                apiUrl: "https://jardindesconnaissances.univ-paris8.fr/THYP/20-21/g2/omk/api/"
             })
 
             cardStudentItem.getData();
