--- a/template/index.html
+++ b/template/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8">
 		<title>Mention Humanités Numériques : trombinoscope de la promotion 2020 - 2021</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<script src="https://d3js.org/d3.v4.min.js"></script>
@@ -15,19 +14,92 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js" crossorigin="anonymous"></script>        
         <script src="js/opml.js" ></script>
         <script src="js/dataStudent.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>
+            #title h1{
+                font-family: 'Crimson Text', serif;
+                height: 10%;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+
+            #title{
+                border-bottom: 1px solid #e8eceb;
+                margin-bottom: 15px;
+                background-color: whitesmoke;
+            }
+
+            .number{
+                font-style: italic;
+                color: darkgray;
+            }
+
+            input[type=text] {
+                margin-left: 1rem;
+                margin-right: 1rem;
+            }
+
+            .hide{
+                display: none!important;
+            }
+
+            .profil-img {
+                border-radius: 1rem;
+                width: 100%;
+                height: auto;
+                margin-bottom: 15px;
+                margin-top: 15px;
+            }
+            button{
+                cursor: pointer;
+            }
+
+            [data-theme="dark"] #title{
+                background-color: rgb(8, 8, 8) !important;
+                color: #eee;
+            }
+
+            [data-theme="dark"] {
+                background-color: rgb(27, 27, 27) !important;
+                color: #eee;
+            }
+
+            [data-theme="dark"] .card-body{
+                background-color: darkslategray!important;
+                color: #eee!important;
+            }
+        </style>
 	</head>
 
-    <body>
+    <body class="bg-light">
 
-        <div class="jumbotron mb-0" style="background-color:#A5DF00 !important">
-            <h1 class="display-3">Étudiants</h1>
-            <h2>Promotion 2020 - 2021</h2>  
+        <div id="header">
+            <div id="title" >
+                <h1>Mention Humanités Numériques <small>2020/2021</small></h1>
+            </div>
+        </div>
+
+        <div class="dropdown" style="text-align: center;">
+            <button id="btn_menu" class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">
+              Tous
+            </button>
+            <div class="dropdown-menu">
+              <a id="menu_M1_CEN" class="dropdown-item"  onclick="Tri('CEN')" style="cursor: pointer;">M1 CEN</a>
+              <a id="menu_M1_NET" class="dropdown-item" onclick="Tri('NET')" style="cursor: pointer;">M1 NET</a>
+              <a id="menu_M2_THYP" class="dropdown-item" onclick="Tri('THYP')" style="cursor: pointer;">M2 THYP</a>
+              <a id="menu_M1_GSI" class="dropdown-item" onclick="Tri('GSI')" style="cursor: pointer;">M1 GSI</a>
+              <a id="menu_Tous" class="dropdown-item" onclick="Tri('Tous')" style="cursor: pointer;">Tous</a>
+            </div>
+            <input id="search" type="text" placeholder="Recherche">
+            <button id="dark_mode" class="btn btn-dark" onclick="Switch(this)">Dark</button>
+            <button id="display_mode" class="btn btn-primary" onclick="Display()">Affichage</button>
         </div>
         <h5 class="container">Item étudiant</h5>
-        <div id="studentItem"></div>
+        <div id="studentItem" class="container"></div>
         
         <h5 class="container">Items étudiant</h5>
-        <div id="studentItems"></div>
+        <div id="studentItems" class="container"></div>
 
         <script>
             
@@ -47,6 +119,78 @@
             })
 
             cardStudentItem.getData();
+
+            let divContainers = document.getElementById("studentItems");
+            
+            function Tri(id){
+                
+                let profils = divContainers.getElementsByClassName("card");
+                
+                document.getElementById("btn_menu").innerText = id
+                Object.values(profils).forEach(element => {
+                    if(id === "Tous"){
+                        element.classList.remove("hide");
+                    }
+                    else if(element.innerHTML.includes(id)){
+                        element.classList.remove("hide");
+                    }
+                    else {
+                        element.classList.add("hide");
+                    }
+                });
+            }
+
+            let input = document.getElementById("search");
+            input.addEventListener("keyup", function(event) {
+                if (event.keyCode === 13 && input.value) {
+                    let profils = divContainers.getElementsByClassName("card");
+                    console.log(profils);
+                    Object.values(profils).forEach(element => {
+                        if(element.innerHTML.includes(input.value)){
+                            element.classList.remove("hide");
+                        }
+                        else{
+                            element.classList.add("hide");
+                        }
+                    });
+                }
+            });
+
+            function Switch(button){
+                if(button.innerHTML === "Dark"){
+                    button.innerHTML = "Light";
+                    button.classList.remove("btn-dark");
+                    button.classList.add("btn-light");
+                    document.body.setAttribute('data-theme', 'dark');
+                }
+
+                else{
+                    button.innerHTML = "Dark";
+                    button.classList.remove("btn-light");
+                    button.classList.add("btn-dark");
+                    document.body.removeAttribute('data-theme');
+                }
+            }
+
+            
+            function Display(){
+                let profils = divContainers.getElementsByClassName("card");
+
+                if(profils[0].className === "card w-25 m-3 d-inline-block"){
+                   for(let i = 0; i < profils.length; i++){
+                        profils[i].className = "card w-50 col-sm-5 mb-5 mr-2 ml-2 p-0 d-inline-block";
+                    }
+                        
+                }
+                else{
+                    for(let i = 0; i < profils.length; i++){
+                        profils[i].className = "card w-25 m-3 d-inline-block";
+                    }
+                        
+                }
+            }
+
+
         </script>
     </body>
 </html>
