--- a/template/index.html
+++ b/template/index.html
@@ -88,7 +88,7 @@
               <a id="menu_M1_CEN" class="dropdown-item"  onclick="Tri('CEN')" style="cursor: pointer;">M1 CEN</a>
               <a id="menu_M1_NET" class="dropdown-item" onclick="Tri('NET')" style="cursor: pointer;">M1 NET</a>
               <a id="menu_M2_THYP" class="dropdown-item" onclick="Tri('THYP')" style="cursor: pointer;">M2 THYP</a>
-              <a id="menu_M1_GSI" class="dropdown-item" onclick="Tri('GSI')" style="cursor: pointer;">M1 GSI</a>
+              <a id="menu_M1_SGI" class="dropdown-item" onclick="Tri('SGI')" style="cursor: pointer;">M1 GSI</a>
               <a id="menu_Tous" class="dropdown-item" onclick="Tri('Tous')" style="cursor: pointer;">Tous</a>
             </div>
             <input id="search" type="text" placeholder="Recherche">
